--- a/greeting.html
+++ b/greeting.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <strong>hi,
-    <em>Akshith!</em></strong>
+    <strong>hi,</strong>
+    <em>Akshith!</em>
+    
 </body>
 </html>
